// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DCFormField renders all the input components 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DCFormField
    additionalProps={
      Object {
        "description": "A description for this input",
        "displayName": "DCText",
        "error": "",
        "name": "myTextInput",
        "parent": "myForm",
        "required": true,
        "value": "",
        "warning": "",
      }
    }
    tag="DCText"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "description": "A description for this input",
      "displayName": "DCText",
      "error": "",
      "name": "myTextInput",
      "parent": "myForm",
      "required": true,
      "value": "",
      "warning": "",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "description": "A description for this input",
        "displayName": "DCText",
        "error": "",
        "name": "myTextInput",
        "parent": "myForm",
        "required": true,
        "value": "",
        "warning": "",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`DCFormField renders all the input components 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DCFormField
    additionalProps={
      Object {
        "description": "A description for this input",
        "displayName": "DCBoolean",
        "name": "myBooleanInput",
        "parent": "myForm",
        "value": false,
      }
    }
    tag="DCBoolean"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "description": "A description for this input",
      "displayName": "DCBoolean",
      "name": "myBooleanInput",
      "parent": "myForm",
      "value": false,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "description": "A description for this input",
        "displayName": "DCBoolean",
        "name": "myBooleanInput",
        "parent": "myForm",
        "value": false,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`DCFormField renders all the input components 3`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DCFormField
    additionalProps={
      Object {
        "description": "A description for this input",
        "displayName": "DCNumber",
        "error": "",
        "name": "myNumberInput",
        "parent": "myForm",
        "required": true,
        "value": "",
        "warning": "",
      }
    }
    tag="DCNumber"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "description": "A description for this input",
      "displayName": "DCNumber",
      "error": "",
      "name": "myNumberInput",
      "parent": "myForm",
      "required": true,
      "value": "",
      "warning": "",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "description": "A description for this input",
        "displayName": "DCNumber",
        "error": "",
        "name": "myNumberInput",
        "parent": "myForm",
        "required": true,
        "value": "",
        "warning": "",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`DCFormField renders all the input components 4`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DCFormField
    additionalProps={
      Object {
        "description": "A description for this input",
        "displayName": "DCRadio",
        "error": "",
        "name": "myRadioInput",
        "options": Array [
          Object {
            "key": "thisOption",
            "text": "This option",
            "value": "thisOption",
          },
          Object {
            "key": "thatOption",
            "text": "That option",
            "value": "thatOption",
          },
          Object {
            "key": "somethingElse",
            "text": "Something else",
            "value": "somethingElse",
          },
        ],
        "parent": "myForm",
        "required": true,
        "value": "",
        "warning": "",
      }
    }
    tag="DCRadio"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "description": "A description for this input",
      "displayName": "DCRadio",
      "error": "",
      "name": "myRadioInput",
      "options": Array [
        Object {
          "key": "thisOption",
          "text": "This option",
          "value": "thisOption",
        },
        Object {
          "key": "thatOption",
          "text": "That option",
          "value": "thatOption",
        },
        Object {
          "key": "somethingElse",
          "text": "Something else",
          "value": "somethingElse",
        },
      ],
      "parent": "myForm",
      "required": true,
      "value": "",
      "warning": "",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "description": "A description for this input",
        "displayName": "DCRadio",
        "error": "",
        "name": "myRadioInput",
        "options": Array [
          Object {
            "key": "thisOption",
            "text": "This option",
            "value": "thisOption",
          },
          Object {
            "key": "thatOption",
            "text": "That option",
            "value": "thatOption",
          },
          Object {
            "key": "somethingElse",
            "text": "Something else",
            "value": "somethingElse",
          },
        ],
        "parent": "myForm",
        "required": true,
        "value": "",
        "warning": "",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`DCFormField renders all the input components 5`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DCFormField
    additionalProps={
      Object {
        "description": "A description for this input",
        "displayName": "DCDate",
        "error": "",
        "name": "myDateInput",
        "parent": "myForm",
        "required": true,
        "value": "",
        "warning": "",
      }
    }
    tag="DCDate"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "description": "A description for this input",
      "displayName": "DCDate",
      "error": "",
      "name": "myDateInput",
      "parent": "myForm",
      "required": true,
      "value": "",
      "warning": "",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "description": "A description for this input",
        "displayName": "DCDate",
        "error": "",
        "name": "myDateInput",
        "parent": "myForm",
        "required": true,
        "value": "",
        "warning": "",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`DCFormField renders one DCFormField component 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DCFormField />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {},
    "ref": null,
    "rendered": null,
    "type": undefined,
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": undefined,
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
